# fatcli

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  session_token
.github/workflows/: release.yml
src/fatcli/: main.py  settings.py
src/fatcli/commands/: __init__.py  init.py  profile.py
src/fatcli/commands/meals/: __init__.py  add.py  delete.py  get.py  info.py  search.py
src/fatsecret_hand/: HAND.toml  SKILL.md  __init__.py
