[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fatcli"
version = "0.1.0"
description = "CLI tool for Fatsecret API - track nutrition, meals, and fitness goals"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Nimit Bhardwaj", email = "nimitbhardwaj@gmail.com" }
]
keywords = ["fatsecret", "nutrition", "cli", "health", "fitness", "macros"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]
dependencies = [
    "fatsecret>=0.5.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
fatcli = "fatcli.main:main"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "coverage[toml]>=7.13.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--tb=short", "--strict-markers"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["D212", "D213"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
line-ending = "auto"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["fatcli"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
follow_imports = "silent"
